--- a/Terzo Anno/Automi/Automi.tex
+++ b/Terzo Anno/Automi/Automi.tex
@@ -13,6 +13,7 @@
 \usepackage{tikz}
 \usepackage{tocloft}
 \usepackage[italian]{babel}
+\usepackage{makecell}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt}
 
@@ -1490,6 +1491,245 @@ $$
 \end{figure}
 \newpage
 
+\subsection{Grammatica generativa}
+
+\begin{tcolorbox}[colback=blue!10!white, colframe=blue!50!black, title=Definizione 2.35]
+    Una grammatica è una quadrupla $G = (V,\Sigma,R,S)$ dove
+    \begin{enumerate}
+        \item $V$ è un insieme finito di variabili.
+        \item $\Sigma$ è un insieme finito di simboli terminali disgiunto da $V$.
+        \item $R$ è un insieme finito di regole di produzione, con $R \subseteq (V \cup \Sigma)^+ \times (V \cup \Sigma)^*$.
+        \item $S \in V$ è la variabile iniziale.
+    \end{enumerate}
+\end{tcolorbox}
+Notazionalmente, regole con la stessa parte sinistra sono raggruppate, cioè se ($\alpha,\beta_1$),...,($\alpha,\beta_n$) sono regole in $R$ con prima componente $\alpha$, scriveremo $\alpha \rightarrow \beta_1 \mid ... \mid \beta_n$.
+
+Se $u,v,\alpha,\beta$ sono stringhe di variabili e terminali, ed ($\alpha,\beta$) è una regola della grammatica, diremo che $u\alpha v$  \textit{\textbf{produce}} $u\beta v$ in un passo, e scriveremo $u\alpha v \Rightarrow u\beta v$.
+
+Diremo che $u$ \textit{\textbf{deriva}} $v$, scritto $u \Rightarrow^* v$, se $u = v$ oppure se esiste una sequenza $u_1, u_2, ..., u_k$ con ($k \geq 0$) tale che $u \Rightarrow u_1 \Rightarrow ... \Rightarrow u_k \Rightarrow v$.
+
+Il \textit{\textbf{linguaggio generato dalla grammatica}} $G$ è $L(G) = \{w \in \Sigma^* \mid S \Rightarrow^* w\}$.
+
+\subsubsection{Gerarchia di Chomsky}
+In base alla forma delle regole della grammatica, possiamo distinguere i seguenti tipi:
+
+\begin{table}[H]
+    \centering
+    \renewcommand{\arraystretch}{1.5}
+    \begin{tabular}{|c|c|c|}
+        \hline
+        \textbf{\textit{Tipo della grammatica}} & \textbf{\textit{Forma delle Regole}} & \textbf{\textit{Linguaggio prodotto}} \\
+        \hline
+        Tipo 0 & Nessun vincolo & Ricorsivamente enumerabile \\
+        \hline
+        Tipo 1 & \makecell{$\alpha ::= \beta$ \\ per $0 < \mid \alpha \mid \leq \mid \beta \mid$} & Context-sensitive \\
+        \hline
+        Tipo 2 & \makecell{$A ::= \beta$ \\ per $A \in V, \beta \in (\Sigma \cup V)^*$} & Context-free \\
+        \hline
+        Tipo 3 & \makecell{$A ::= \beta$ \\ per $A \in V, \beta \in (\Sigma^* \cup \Sigma^* V \bigcup V\Sigma^*)$} & Regolare \\
+        \hline
+    \end{tabular}
+    \label{tab:example_table}
+\end{table}
+
+\begin{tcolorbox}[colback=red!10!white, colframe=red!50!black, title=\textbf{NB!}]
+    Per i linguaggi che non contengono $\varepsilon$, si può vedere facilmente che ogni grammatica di tipo $i$ è anche la grammatica di tipo $j$, per ogni $j < i$.
+\end{tcolorbox}
+
+\begin{tcolorbox}[colback=red!10!white, colframe=red!50!black, title=\textbf{OSS}]
+    Il nome <<context-sensitive>> deriva dal fatto che ogni grammatica di tipo 1 può essere trasformata in una grammatica equivalente in cui tutte le regole hanno la forma
+    $$
+    (\alpha_1 A \alpha_2, \alpha_1 \beta \alpha_2) \text{ per } A \in V, \alpha_1, \alpha_2 \in (\Sigma \cup V)^* \text{ e } \beta \in (\Sigma \cup V)^+.
+    $$
+    I una CFG, $\alpha_1 = \alpha_2 = \varepsilon$ e quindi $A$ può essere sempre sostituita con $\beta$;
+    al contrario, in una CSG questo è possibile sono nel contesto $\alpha_1[-] \alpha_2$.
+\end{tcolorbox}
+
+\newpage
+\subsubsection{Grammatiche Regolari}
+Una grammatica $G = (V,\Sigma,R,S)$ è detta
+\begin{itemize}
+    \item \textbf{\textit{Lineare sinistra}} se, per ogni ($\alpha,\beta$) $\in R$, si ha che $\alpha \in V$ e $\beta \in (\Sigma^* \cup V\Sigma^*)$. 
+    \item \textbf{\textit{Lineare destra}} se, per ogni ($\alpha,\beta$) $\in R$, si ha che $\alpha \in V$ e $\beta \in (\Sigma^* \cup \Sigma^* V)$.
+    \item \textbf{\textit{Regolare}} se è lineare sinistra o lineare destra.
+\end{itemize}
+
+\textbf{ESEMPIO\_1:} La seguente grammatica per numeri naturali è regolare (più precisamente, lineare destra):
+\begin{align*}
+    &NUMB ::= 0 \mid 1 DIGITSEQ \mid ... \mid 9 DIGITSEQ \\
+    &DIGITSEQ ::= \varepsilon \mid 0 DIGITSEQ \mid ... \mid 9 DIGITSEQ
+\end{align*}
+
+\textbf{ESEMPIO\_2:} Il linguaggio (regolare) $0(10)^*$ è generato dalla seguente grammatica lineare destra:
+\begin{align*}
+    &S ::= 0A \\
+    &A ::= \varepsilon \mid 10A
+\end{align*}
+o, equivalentemente dalla grammatica lineare sinistra:
+\begin{align*}
+    &S ::= 0 \mid S10
+\end{align*}
+Con la prima grammatica, possiamo derivare $0101010$ come segue:
+\begin{align*}
+    &S \Rightarrow 0A \Rightarrow 010A \Rightarrow 01010A \Rightarrow 0101010A \Rightarrow 0101010
+\end{align*}
+
+Con la seconda grammatica, possiamo derivare $0101010$ come segue:
+\begin{align*}
+    &S \Rightarrow S10 \Rightarrow S1010 \Rightarrow S101010 \Rightarrow 0101010
+\end{align*}
+
+\subsection{Linguaggi regolari vs Grammatiche lineari destre}
+
+\paragraph{Teorema 9.1(orale)}
+\label{teorema-9.1}
+\text{}
+\newline
+Se $L$ è regolare, allora è generato da una grammatica lineare destra.
+
+\begin{tcolorbox}[colback=yellow!10!white, colframe=yellow!50!black, title=Dimostrazione]
+    Sia $L = L(M)$ per un DFA $M = (Q,\Sigma,\delta,q_0,F)$.
+
+    Supponiamo per ora che $q_0$ non sia finale.
+
+    Allora, $L = L(G)$, dove $G$ è la grammatica lineare destra ($Q,\Sigma,R,q_0$), dove $R$ include
+    \begin{itemize}
+        \item $q ::= aq'$, se $\delta(q,a) = q'$,
+        \item $q ::= a$, se $\delta(q,a) \in F$,
+    \end{itemize}
+    Per induzione su $|w|$, si può provare che $\delta(q,w) = q'$ se e solo se $q \Rightarrow^* wq'$.
+
+    Se $q_0$ è finale, consideriamo la grammatica $G' = (Q \cup \{S\}, \Sigma, R', S)$ con $S \notin Q$ e $R' = R \cup \{ S ::= \varepsilon | q_0 \}$ dove $R$ è costruito sopra.
+\end{tcolorbox}
+
+\textbf{ESEMPIO:} Si consideri il seguente DFA per il linguaggio $0(10)^*$:
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.3\textwidth]{Immagini/114.png}
+    \label{fig:dfa_example} 
+\end{figure}
+
+La grammatica lineare destra per questo DFA è
+\begin{align*}
+    &A ::= 0B \mid 1D \mid 0 \\
+    &B ::= 0D \mid 1C \\
+    &C ::= 0B \mid 1D \mid 0 \\
+    &D ::= 0D \mid 1D \\
+\end{align*}
+Si noti che la variabile $D$ non è realmente necessaria (nell'automa abbiamo bisogno dello stato <<pozzo>> $D$ perchè l'automa è deterministico, e quindi dobbiamo gestire tutti i possibili input, per es. le stringhe che iniziano con un 1)
+
+Quindi, una grammatica più compatta (ed equivalente alla precedente) è 
+\begin{align*}
+    &A ::= 0B \mid 0 \\
+    &B ::= 1C \\
+    &C ::= 0B \mid 0 \\
+\end{align*}
+
+\paragraph{Corollario1(orale)}
+\label{corollario-9.1}
+\text{}
+\newline
+\begin{tcolorbox}[colback=blue!10!white, colframe=blue!50!black, title=Dimostrazione]
+    Siccome $L$ è regolare, anche $L^R$ è regolare (per una proprietà di chiusura dei linguaggi regolari).
+
+    Sia $L^R = L(M)$ per un DFA $M$.
+    
+    Per il \hyperref[teorema-9.1]{Teorema 9.1}, esiste una grammatica lineare destra $G$ t.c. $L^R = L(G)$.
+    
+    Ora si considerei $G^R$, la grammatica otenuta da $G$ invertendo le parti destre di tutte le sue produzioni.
+
+    $G^R$ è una grammatica lineare sinistra e $L(G^R) = (L(G))^R = (L^R)^R = L$.
+\end{tcolorbox}
+
+\paragraph{Teorema 9.2(orale)}
+\label{teorema-9.2}
+\text{}
+\newline
+Se $L$ è generato da una grammatica lineare destra, allora $L$ è regolare.
+
+\begin{tcolorbox}[colback=yellow!10!white, colframe=yellow!50!black, title=Dimostrazione]
+    Sia $L = L(G)$, per una qualche grammatica lineare destra $G = (V,\Sigma,R,S)$.
+
+    Costruiamo un NFA con $\varepsilon$-mosse $M = (Q,\Sigma,\delta,q_0,F)$ che simuli derivazioni in $G$:
+    \begin{itemize}
+        \item $Q$ è formato da tutti gli [$\alpha$] tali che $\alpha = S$ o $\alpha$ è un suffisso (non necessariamente proprio) di una qualche parte destra di una regola di $R$
+        \item $q_0 = [S]$
+        \item $F = \{[\varepsilon]\}$
+        \item $\delta$ è definito come segue:
+        \begin{itemize}
+            \item Se $A \in V$, allora $\delta([A],\varepsilon) = \{[\alpha] \mid A ::= \alpha \in R\}$.
+            \item Se $a \in \Sigma$ ed $\alpha \in (\Sigma^* \cup \Sigma^*V)$, allora $\delta([a\alpha],a) = \{[\alpha]\}$.
+        \end{itemize}
+    \end{itemize}
+    Per induzione su $|w|$, si può provare che $[\alpha] \in \delta([S],w)$ se e solo se $S \Rightarrow^* w\alpha$.
+
+    Siccome $[\varepsilon]$ è l'unico stato finale, $M$ accetta $w$ (cioè, $[\varepsilon] \in \delta([S],w)$) sse $S \Rightarrow^* w$.
+\end{tcolorbox}
+
+\textbf{ESEMPIO:} Consideriamo la grammatica lineare destra:
+\begin{align*}
+    &S ::= 0A \\
+    &A ::= \varepsilon \mid 10A
+\end{align*}
+L'automa ad essa associato è:
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.3\textwidth]{Immagini/115.png}
+    \label{fig:dfa_example}
+\end{figure}
+E' facile convincersi che il linguaggio accettato è $0(10)^*$.
+
+\subsection{Grammatiche lineari sinistre vs Linguaggi regolari}
+\paragraph{Corollario2(orale)}
+\label{corollario-9.2}
+\text{}
+Se $L$ è generato da una grammatica lineare sinistra, allora $L$ è regolare.
+
+\begin{tcolorbox}[colback=blue!10!white, colframe=blue!50!black, title=Dimostrazione]
+    Sia $L = L(G)$, per una qualche grammatica lineare sinistra $G$.
+
+    Si consideri $G^R$, la grammatica lineare destra ottenuta da $G$ invertendo le parti destre di tutte le sue regole.
+    
+    Chiaramente, $L(G^R) = (L(G))^R$.
+
+    Per il \hyperref[teorema-9.2]{Teorema 9.2}, sicoome $G^R$ è lineare destra, $L(G^R)$ è regolare.
+    
+    Siccome i linguaggi regolari sono chiusi rispetto all'operazione di complemento, $L = (L(G^R))^R$ è regolare.
+
+    Ma $(L(G^R))^R = ((L(G))^R)^R = L(G)$, e quindi $L = L(G)$ è regolare.
+\end{tcolorbox}
+
+\subsection{Left- vs Right-linear Grammars}
+\paragraph{Corollario(orale)}
+\label{corollario-9.3}
+\text{}
+$L$ ammette una grammatica lineare destra se e solo se ammette una grammatica lineare sinistra
+\begin{tcolorbox}[colback=blue!10!white, colframe=blue!50!black, title=Dimostrazione]
+    $L = L(G)$, per qualche grammatica lineare destra
+    \begin{itemize}
+        \item SSE $L$ è regolare (\hyperref[teorema-9.1]{Teorema 9.1} + \hyperref[teorema-9.2]{Teorema 9.2})
+        \item SSE $L = L(G),$ per qualche grammatica lineare sinistra (\hyperref[corollario-9.1]{Corollario1} + \hyperref[corollario-9.2]{Corollario2})
+    \end{itemize}
+\end{tcolorbox}
+
+\begin{tcolorbox}[colback=red!10!white, colframe=red!50!black, title=\textbf{OSS}]
+    Questo corollario dà anche un algoritmo per passare da una grammatica lineare sinistra a una lineare destra, e viceversa (tramite automi).
+    
+    (esistono algoritmi che effettuano la trasformazione direttamanete e in maniera più efficiente)    
+\end{tcolorbox}
+
+\subsection*{Accettori di Linguaggi}
+In corrispondenza di ogni tipo di grammatica, esiste una particolare macchina astratta in grado di accettare tutti e soli i linguaggi generati da quel tipo di grammatiche:
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.3\textwidth]{Immagini/116.png}
+    \label{fig:your_image}
+\end{figure}
+
+\clearpage
 \section{La Tesi di Church-Turing}
 \subsection{Macchine di Turing}
 Introduciamo ora un modello molto più potente, proposto inizialmente da Alan Turing nel 1936, chamato \textbf{macchina di Turing}.
